project/stage/tests/reject/bad_array_ref_2.ul
void main(){
  int[10] things;
  string thing;

  things[5] = 1;
 
  thing = things[5];
}